<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/mainSV">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:baselineAligned="false"
        android:background="@android:color/holo_blue_dark">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:id="@+id/LabelsLL"
            android:background="@android:color/holo_blue_dark"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/categoryLabel"
                android:id="@+id/categoryNameCaptionTextView"
                android:layout_marginLeft="30dp"
                android:textAlignment="center"
                android:layout_weight="0.06"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sensor"
                android:id="@+id/titleSensorCaptioTextView"
                android:layout_marginLeft="100dp"
                android:autoText="false"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="376dp"
            android:id="@+id/followingCatListView"
            android:choiceMode="multipleChoice"
            android:layout_weight="0.77"
            android:background="#ffd8ff5d" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveFollowingCatLebel"
            android:id="@+id/saveFollowingCatButton" />

    </LinearLayout>
</RelativeLayout>